COMMERCE-1079 Add Commerce sample sql to builder

--- a/benchmarks/build.xml
+++ b/benchmarks/build.xml
@@ -13,6 +13,10 @@
 			/>
 			<fileset
 				dir="${sdk.dir}/dist"
+				includes="com.liferay.commerce.*.jar"
+			/>
+			<fileset
+				dir="${sdk.dir}/dist"
 				includes="com.liferay.dynamic.data.*.jar"
 			/>
 			<fileset
