--- a/benchmarks/benchmarks.properties
+++ b/benchmarks/benchmarks.properties
@@ -66,6 +66,21 @@
     sample.sql.max.blogs.entry.count=10
 
     #
+    # Specify the number of products to generate.
+    #
+    sample.sql.max.commerce.product.count=10
+
+    #
+    # Specify the number of definitions to generate per product.
+    #
+    sample.sql.max.commerce.product.definition.count=1
+
+    #
+    # Specify the number of instances to generate per definition.
+    #
+    sample.sql.max.commerce.product.instance.count=1
+
+    #
     # Specify the number of custom fields to generate per structured dynamic
     # data lists record set.
     #
@@ -180,7 +195,7 @@
     #
     # Specify the CSV file names to generate.
     #
-    sample.sql.output.csv.file.names=assetPublisher,blog,company,documentLibrary,dynamicDataList,layout,mbCategory,mbThread,repository,wiki
+    sample.sql.output.csv.file.names=assetPublisher,blog,company,cpfriendlyurlentry,documentLibrary,dynamicDataList,layout,mbCategory,mbThread,repository,wiki
 
     #
     # Specify the directory to output the generated SQL files.
